# CAD

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CAD.js  CAD.wasm  CMakeLists.txt  ENVIRONMENT.MD  FACE_CREATION_ACCEPTANCE_CRITERIA.md  LLM_RESEARCH.md  README.md  build-info.txt  cmake_test_discovery_3462875a64.json  hello.html  hello.js  hello.wasm  index.html  index_new.html  main.cpp
.github/workflows/: ci.yml
scripts/: build-and-run-local.sh  build-and-serve-web.sh  build-web.sh  format.sh  setup-env-macos.sh  setup-env-ubuntu.sh
scripts/hooks/: clang-format-and-add.sh  fix-eof-fixer.sh  fix-trailing-whitespace.sh
src/: hello.cpp  hello.h  main.cpp
src/App/: Application.cpp  Application.h  Input.h  InputHandler.cpp  InputHandler.h
src/App/Commands/: CommandStack.cpp  CommandStack.h  Commands.cpp  Commands.h  ICommand.h
src/Core/: Constants.h  Events.cpp  Events.h  Primitives.h
src/Geometry/: Geometry.cpp  Geometry.h
src/Model/: Model.cpp  Model.h
src/Model/Commands/: CommandStack.cpp  CommandStack.h  Commands.h  ICommand.h
src/ModelView/: ModelViewBuilder.cpp  ModelViewBuilder.h  ModelViews.h
src/Rendering/: Camera.cpp  Camera.h  FrameContext.h  PrimitiveTopology.h  Renderer.cpp  Renderer.h
src/Rendering/Devices/: GpuHandle.h  OpenGLRenderDevice.cpp  OpenGLRenderDevice.h  RenderDevice.h  RenderDevice_Common.cpp  RenderDevice_Emscripten.cpp  RenderDevice_Native.cpp
src/Rendering/GLSL/: basicFragmentShader copy.glsl  basicFragmentShader.glsl  basicVertexShader.glsl  debugFragment.glsl  debugVertex.glsl  groundPlaneFragmentShader.glsl  groundPlaneVertexShader.glsl  lineFragmentShader.glsl  lineThicknessGeometryShader.glsl  pointFragment.glsl  pointFragmentInstanced.glsl  pointGeometry.glsl  pointVertex.glsl  pointVertexInstanced.glsl  textureToScreenFragmentShader.glsl  textureToScreenVertexShader.glsl  worldPosFragmentShader.glsl  worldPosVertexShader.glsl
src/Rendering/Passes/: FacePass.cpp  FacePass.h  LinePass.cpp  LinePass.h  RenderPass.cpp  RenderPass.h  RenderPassConfiguration.h  ScreenPass.cpp  ScreenPass.h
src/Rendering/Resources/: IndexBuffer.cpp  IndexBuffer.h  RenderResources.cpp  RenderResources.h  RenderResources.h.bak  ShaderProgram.cpp  ShaderProgram.h  UniformBuffer.h  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h
src/Topology/: Tools.h  Validation.h
src/Utilities/: Event.h  Event_Impl.h  IO.cpp  IO.h  Mapped.h  Mat4.cpp  Mat4.h  SparseSet.h  Vec3.cpp  Vec3.h
test/: CMakeLists.txt  test_command_stack.cpp  test_dirty_sparse_set.cpp  test_main.cpp  test_model.cpp  test_pipeline_flow.cpp
web/: build-info.txt  index_new.html
web-build/: CTestTestfile.cmake
